--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,300;0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700;1,9..40,400&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Space+Grotesk:wght@300;400;500;600;700&display=swap"
     rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
   <style>
     :root {
       --bg: #FEDBC4;
@@ -777,96 +778,98 @@
             <div class="sb-value gold-val" id="sumPayback">0 mo</div>
           </div>
         </div>
+        <div style="overflow-x: auto;">
+          <table class="roi-table" style="margin-top:28px;">
+            <thead>
+              <tr>
+                <th style="width:40%"></th>
+                <th>Steady State</th>
+                <th>Year 1</th>
+                <th>Year 2</th>
+                <th>Year 3</th>
+                <th>Total</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr class="section-header">
+                <td colspan="6">Benefits</td>
+              </tr>
+              <tr>
+                <td>Revenue Uplift (Margin $M)</td>
+                <td id="roiBenSS">—</td>
+                <td id="roiBenY1">—</td>
+                <td id="roiBenY2">—</td>
+                <td id="roiBenY3">—</td>
+                <td id="roiBenTotal" class="positive">—</td>
+              </tr>
+              <tr class="total-row">
+                <td>Total Benefits</td>
+                <td id="roiBenTotalSS">—</td>
+                <td id="roiBenTotalY1">—</td>
+                <td id="roiBenTotalY2">—</td>
+                <td id="roiBenTotalY3">—</td>
+                <td id="roiBenTotalAll" class="positive">—</td>
+              </tr>
 
-        <table class="roi-table" style="margin-top:28px;">
-          <thead>
-            <tr>
-              <th style="width:40%"></th>
-              <th>Steady State</th>
-              <th>Year 1</th>
-              <th>Year 2</th>
-              <th>Year 3</th>
-              <th>Total</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr class="section-header">
-              <td colspan="6">Benefits</td>
-            </tr>
-            <tr>
-              <td>Revenue Uplift (Margin $M)</td>
-              <td id="roiBenSS">—</td>
-              <td id="roiBenY1">—</td>
-              <td id="roiBenY2">—</td>
-              <td id="roiBenY3">—</td>
-              <td id="roiBenTotal" class="positive">—</td>
-            </tr>
-            <tr class="total-row">
-              <td>Total Benefits</td>
-              <td id="roiBenTotalSS">—</td>
-              <td id="roiBenTotalY1">—</td>
-              <td id="roiBenTotalY2">—</td>
-              <td id="roiBenTotalY3">—</td>
-              <td id="roiBenTotalAll" class="positive">—</td>
-            </tr>
+              <tr class="section-header">
+                <td colspan="6">Costs</td>
+              </tr>
+              <tr>
+                <td>One-Time Implementation</td>
+                <td></td>
+                <td id="roiImplY1" class="negative">—</td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr class="total-row">
+                <td>Total Costs</td>
+                <td></td>
+                <td id="roiCostY1" class="negative">—</td>
+                <td id="roiCostY2" class="negative">—</td>
+                <td id="roiCostY3" class="negative">—</td>
+                <td></td>
+              </tr>
 
-            <tr class="section-header">
-              <td colspan="6">Costs</td>
-            </tr>
-            <tr>
-              <td>One-Time Implementation</td>
-              <td></td>
-              <td id="roiImplY1" class="negative">—</td>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr class="total-row">
-              <td>Total Costs</td>
-              <td></td>
-              <td id="roiCostY1" class="negative">—</td>
-              <td id="roiCostY2" class="negative">—</td>
-              <td id="roiCostY3" class="negative">—</td>
-              <td></td>
-            </tr>
+              <tr class="section-header">
+                <td colspan="6">Analysis</td>
+              </tr>
+              <tr>
+                <td>Net Benefits</td>
+                <td></td>
+                <td id="roiNetY1">—</td>
+                <td id="roiNetY2">—</td>
+                <td id="roiNetY3">—</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>Cumulative Net Benefits</td>
+                <td></td>
+                <td id="roiCumNetY1">—</td>
+                <td id="roiCumNetY2">—</td>
+                <td id="roiCumNetY3">—</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>Annualized ROI</td>
+                <td></td>
+                <td id="roiAnnY1">—</td>
+                <td id="roiAnnY2">—</td>
+                <td id="roiAnnY3">—</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>Cumulative ROI</td>
+                <td></td>
+                <td id="roiCumY1">—</td>
+                <td id="roiCumY2">—</td>
+                <td id="roiCumY3">—</td>
+                <td></td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
 
-            <tr class="section-header">
-              <td colspan="6">Analysis</td>
-            </tr>
-            <tr>
-              <td>Net Benefits</td>
-              <td></td>
-              <td id="roiNetY1">—</td>
-              <td id="roiNetY2">—</td>
-              <td id="roiNetY3">—</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>Cumulative Net Benefits</td>
-              <td></td>
-              <td id="roiCumNetY1">—</td>
-              <td id="roiCumNetY2">—</td>
-              <td id="roiCumNetY3">—</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>Annualized ROI</td>
-              <td></td>
-              <td id="roiAnnY1">—</td>
-              <td id="roiAnnY2">—</td>
-              <td id="roiAnnY3">—</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>Cumulative ROI</td>
-              <td></td>
-              <td id="roiCumY1">—</td>
-              <td id="roiCumY2">—</td>
-              <td id="roiCumY3">—</td>
-              <td></td>
-            </tr>
-          </tbody>
-        </table>
       </div>
     </div>
 
