feat: comment out the logo header container in index.html

--- a/index.html
+++ b/index.html
@@ -608,11 +608,11 @@
 
 <body style="background-color:rgb(254, 239, 219) ;">
   <div class="container">
-    <div class="logo-header-container">
+    <!-- <div class="logo-header-container">
       <a href="https://kasamadigital.com/" target="_blank" class="logo-header">
         <img src="./logo.png" alt="logo" width="86px">
       </a>
-    </div>
+    </div> -->
     <div class="header" style="margin-top: 5rem;">
       <h1 class="site-title">Shop Pay <em>Revenue Impact</em> Model</h1>
       <p class="subtitle" style="margin-top: 4rem;">Enter your storefront metrics below to model the revenue, margin,
