Docs: Clarify data retention and anonymity in the privacy statement.

--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
       <h1 class="site-title">Shop Pay <em>Revenue Impact</em> Model</h1>
       <p class="subtitle" style="margin-top: 4rem;">Enter your storefront metrics below to model the revenue, margin,
         and 3-year ROI impact of adding Shop Pay Commerce components to your ecommerce site. All data entered into the
-        calculator will be anonymous and not for any other use.</p>
+        calculator will remain anonymous and will not be retained.</p>
     </div>
 
     <div class="main-grid">
