fix: update footer 'Want to Learn More?' link to the Shopify partner page.

--- a/index.html
+++ b/index.html
@@ -318,7 +318,8 @@
     </div>
 
     <div class="footer">
-      <a href="https://www.kasamadigital.com/shop-pay" target="_blank">Want to Learn More? &nbsp;&rarr;</a>
+      <a href="https://www.kasamadigital.com/partners/shopify/shop-pay" target="_blank">Want to Learn More?
+        &nbsp;&rarr;</a>
       <div class="tagline">Commerce moves fast. We move faster.</div>
       <div class="credit">kasamadigital.com &nbsp;&bull;&nbsp; Boston &bull; Dallas &bull; Manila</div>
     </div>
