Update the default Shop Pay percentage slider value and its associated hint text.

--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
           <div class="input-group">
             <label>Shop Pay Transactions %</label>
             <div class="slider-row">
-              <input type="range" id="shopPayPct" min="5" max="60" value="20" oninput="calculate()" />
-              <span class="slider-value" id="shopPayPctVal">20%</span>
+              <input type="range" id="shopPayPct" min="5" max="60" value="30" oninput="calculate()" />
+              <span class="slider-value" id="shopPayPctVal">30%</span>
             </div>
-            <div class="input-hint">Shop Pay adoption is typically between 15%–20%</div>
+            <div class="input-hint">Shop Pay adoption is typically between 30% and 36%</div>
           </div>
 
           <div class="input-group">
